--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,24 @@ services:
     volumes:
       - .:/app
       - static_volume:/app/staticfiles
-    ports:
-      - "8000:8000"
+    expose:
+      - "8000"
     env_file:
       - .env
     environment:
       - DEBUG=False
       - ALLOWED_HOSTS=localhost,127.0.0.1
+    restart: unless-stopped
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - static_volume:/app/staticfiles
+    depends_on:
+      - web
     restart: unless-stopped
 
 volumes:
