--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
 services:
   web:
-    build: .
-    command: gunicorn --bind 0.0.0.0:8000 --workers 3 cyberMisha.wsgi:application
+    image: cybermisha:latest
     volumes:
-      - .:/app
       - static_volume:/app/staticfiles
+      - ./db.sqlite3:/app/db.sqlite3
     expose:
       - "8000"
     env_file:
