--- a/nginx.conf
+++ b/nginx.conf
@@ -17,5 +17,10 @@ server {
 
     location /static/ {
         alias /app/staticfiles/;
+        expires 30d;
+        add_header Cache-Control "public, immutable";
+        # Enable gzip compression
+        gzip on;
+        gzip_types text/css application/javascript image/svg+xml;
     }
 }
